[package]
name = "replay_tools"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
once_cell = "1.17.0"
serde = "1.0.152"
serde_json = "1.0.91"
wasm-bindgen = "0.2.84"
wot_replay_parser = { git = "https://github.com/dacite/wot-battle-results-parser" }
